# telluricdeckay

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile.in  README.md  configure.ac  i18n.toml  telluricdeckay.appdata.xml.in  telluricdeckay.desktop.in  telluricdeckayrc
.github/workflows/: rust.yml
assets/: LICENSE
assets/cards/: LICENSE
assets/source/: telluricdeckay.xcf  telluricdeckay_logo_500x500.xcf
i18n/mo/de/: telluricdeckay.mo
i18n/mo/he/: telluricdeckay.mo
i18n/mo/nl/: telluricdeckay.mo
i18n/po/de/: telluricdeckay.po
i18n/po/he/: telluricdeckay.po
i18n/po/nl/: telluricdeckay.po
i18n/pot/: telluricdeckay.pot
i18n/pot/src/: config_h.pot  game.pot  main.pot  player.pot
i18n/pot/src/gui/: asset_manager.pot  mod.pot  scrollables.pot
src/: config.rs  config_h.rs.in  game.rs  gui.rs  lib.rs  main.rs  player.rs  round.rs
src/gui/: asset_manager.rs  mod.rs  scrollables.rs  style.rs
