[package]
name = "telluricdeckay"
description = "A multiplayer network poker game"
version = "0.1.0"
authors = ["andy5995 <andy400-dev@yahoo.com>", "Jammyjamjamman <jdsherratt3@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

publish = false

[dependencies]
#ionic_deckhandler = { path = "../ionic-deckhandler" }

ionic_deckhandler = { git = "https://github.com/TelluricDeckay/ionic-deckhandler", branch = "trunk" }
