[package]
name = "telluricdeckay"
description = "A multiplayer network poker game"
version = "0.1.0-dev"
authors = ["Andy Alt <andy400-dev@yahoo.com>", "Jammyjamjamman <jdsherratt3@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

publish = false

[dependencies]
iced = { git = "https://github.com/hecrj/iced", features = ["image", "svg"] }
structopt = "0.3.15"
configster = "0.1.1"
#ionic_deckhandler = { path = "../ionic-deckhandler" }

ionic_deckhandler = { git = "https://github.com/TelluricDeckay/ionic-deckhandler", branch = "trunk" }

#telluric-handeval = { path = "../telluric-handeval" }
telluric-handeval = { git = "https://github.com/TelluricDeckay/telluric-handeval", branch = "trunk" }
