[package]
name = "telluricdeckay"
description = "A multiplayer network poker game"
version = "0.1.0-dev"
authors = ["Andy Alt <andy400-dev@yahoo.com>", "Jammyjamjamman <jdsherratt3@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

publish = false

[dependencies]
iced = { version = "0.3.0", features = ["image", "debug", "async-std"] }
async-std = "1.0"
i18n-embed = { version = "0.11.0", features = ["gettext-system", "desktop-requester"]}
rust-embed = "6.3.0"
tr = "0.1.6"
dirs = "2.0.2"
structopt = "0.3.15"
configster = "0.1.1"
image = "0.23"
#ionic_deckhandler = { path = "../ionic-deckhandler" }
ionic_deckhandler = "0.1.0"
#ionic_deckhandler = { git = "https://github.com/TelluricDeckay/ionic-deckhandler", branch = "trunk" }

#telluric_handeval = { path = "../telluric_handeval" }
telluric_handeval = { git = "https://github.com/TelluricDeckay/telluric_handeval", branch = "trunk" }
